# python

./: .gitignore  ANOTACOES_IMPORTANTES.txt  Analise_base_vensdas.py  Bot_backup_de_dados_local_para_googledrive.py  Condicionais_if_else_elif.py  ERRO_ESTUDAR.txt  Enviar_Gmail.py  Gabarito - Introdução Python e Selenium.ipynb  README.md  TesteNoGitHub.py  Texto_basico.txt  Texto_teste.txt  Try_Except_else_finally.py  any_all.py  args.py  argumentos_somente_posicionais.py  atividades.py  atributos.py  auxiliar_posicao.py  bot_envia_email_gmail_automatico.py  bot_pyautogui_01.py  bot_pyautogui_02.py  bot_pyautogui_03.py  break.py  chatGpt.py  classes.py  conjunos.py  conjuntos.py  counter.py  debugando_com_pdb.py  decoradores.py  decorator.py  default_dict.py  definindo_funcoes.py  deletar_registros.sql  deque.py  dicionarios.py  dictionary_comprehension.py  dictionary_comprehesion.py  dir_e_help.py  (+63 more)
Curso_8_Horas/: Curso_Total_Basico.py  arquivos.py  compreensao_de_lista.py  funcao_lambda.py  listas.py  modo_randon.py  recursos_finais.py  sets_conjuntos_de_valor_unico.py  variaveis_e_tipos_de_dados.py  variaveis_global_local.py
Docs/: ANOTACOES_IMPORTANTES.txt  Analise_base_vendas.py  Condicionais_if_else_elif.py  Criando_loops.py  app_em_flet.py  arquivo.txt  condicional.py  conjuntos.py  default_dict.py  dunder_name_dunder_main.py  entendendo_ranges.py  erros_mais_comuns_em_python.py  escrevendo_csv.py  escrevendo_cvs_Dict_Writer.py  estruturas_logicas_and_or_not_is.py  (+30 more)
Projeto_1/.github/workflows/: pipeline.yml  pyproject.toml  requirements.txt  tests_simples.py
(+185 files in other folders)
